make site responsive

--- a/index.html
+++ b/index.html
@@ -60,59 +60,12 @@
                     </ul>
                 </nav>
             </div>
-            <div class="background-menu-overlay" id="background-menu-overlay"></div>
+            <div class="overlay-menu" id="overlay-menu"></div>
         </div><!--interface-->
     </header>
 
     <main>
-        <section class="top-site">
-            <div class="interface">
-                <div class="flex">
-                    <div class="txt-top-site">
-                        <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
-                        <p>A criatividade e a inovação são duas forças poderosas que impulsionam
-                            A criatividade é a capacidade de pensar de forma original, de criar
-                            ovas ideias e soluções para os desafios que enfrentamos.</p>
-                        <div class="btn-contact">
-                            <a href="#">
-                                <button>Entre em contacto</button>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="img-top-site">
-                        <img src="Images/logo.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-        </section><!--top-site-->
-
-        <section class="specialities">
-            <div class="interface">
-                <h2 class="title">MY <span>SPECIALITIES.</span></h2>
-                <div class="flex">
-                    <div class="specialities-box">
-                        <i class="bi bi-code-square"></i>
-                        <h3>Website</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
-                    </div>
-                    <div class="specialities-box">
-                        <i class="bi bi-cart"></i>
-                        <h3>Online Store</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
-                    </div>
-                    <div class="specialities-box">
-                        <i class="bi bi-wordpress"></i>
-                        <h3>Blog</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
+        
         <section class="about">
             <div class="interface">
                 <div class="flex">
@@ -136,6 +89,32 @@
                         </div>
                         <p></p>
                         <p></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="specialities">
+            <div class="interface">
+                <h2 class="title">MY <span>SPECIALITIES.</span></h2>
+                <div class="flex">
+                    <div class="specialities-box">
+                        <i class="bi bi-code-square"></i>
+                        <h3>Website</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.</p>
+                    </div>
+                    <div class="specialities-box">
+                        <i class="bi bi-cart"></i>
+                        <h3>Online Store</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.</p>
+                    </div>
+                    <div class="specialities-box">
+                        <i class="bi bi-wordpress"></i>
+                        <h3>Blog</h3>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text ever since the 1500s.</p>
                     </div>
                 </div>
             </div>
