--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div><!--interface-->
     </header>
 
-    <main>
+    <main id="content">
         
         <section class="about">
             <div class="interface">
