--- a/index.html
+++ b/index.html
@@ -22,23 +22,22 @@
     <header>
         <div class="interface">
             <div class="logo">
-                <a href="#">
-                    <img src="Images/logo.jg" alt="Logo da agência">
+                <a href="/home">
+                    <img src="Images/logo.png" alt="Logo da agência">
                 </a>
             </div><!--logo-->
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#">Start</a></li>
-                    <li><a href="#">Tools</a></li>
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="/my_skills">MY SKILLS</a></li>
+                    <li><a href="/about_me">ABOUT ME</a></li>
+                    <li><a href="/projects">PROJECTS</a></li>
                 </ul>
             </nav>
 
             <div class="btn-contact">
-                <a href="#">
-                    <button>Contacts</button>
+                <a href="/contact_me">
+                    <button>CONTACT ME</button>
                 </a>
             </div>
 
@@ -52,11 +51,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#">Start</a></li>
-                        <li><a href="#">Tools</a></li>
-                        <li><a href="#">About Me</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li><a href="/my_skills">MY SKILLS</a></li>
+                        <li><a href="/about_me">ABOUT ME</a></li>
+                        <li><a href="/projects">PROJECTS</a></li>
+                        <li><a href="/contact_me">CONTACT ME</a></li>
                     </ul>
                 </nav>
             </div>
@@ -64,124 +62,28 @@
         </div><!--interface-->
     </header>
 
-    <main id="content">
-        
-        <section class="about">
-            <div class="interface">
-                <div class="flex">
-
-                    <div class="txt-about">
-                        <img src="Images/logo.jpg" alt="">
-                    </div>
-                    <div class="txt-about">
-                        <h2>MUITO PRAZER, <span>SOU PEDRO COSTA.</span></h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s</p>
-                        <div class="btn-social">
-                            <a href="#">
-                                <button>
-                                    <i class="bi bi-linkedin"></i>
-                                </button>
-                            </a>
-                            <a href="#">
-                                <button><i class="bi bi-github"></i></button>
-                            </a>
-                        </div>
-                        <p></p>
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="specialities">
-            <div class="interface">
-                <h2 class="title">MY <span>SPECIALITIES.</span></h2>
-                <div class="flex">
-                    <div class="specialities-box">
-                        <i class="bi bi-code-square"></i>
-                        <h3>Website</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
-                    </div>
-                    <div class="specialities-box">
-                        <i class="bi bi-cart"></i>
-                        <h3>Online Store</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
-                    </div>
-                    <div class="specialities-box">
-                        <i class="bi bi-wordpress"></i>
-                        <h3>Blog</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="portefolio">
-            <div class="interface">
-                <h2 class="title">MY <span>PORTEFOLIO.</span></h2>
-                <div class="flex">
-                    <div class="img-port" style="background-image: url(Images/logo.jpg);">
-                        <div class="overlay">
-                            Projeto 1
-                        </div>
-                    </div>
-                    <div class="img-port" style="background-image: url(Images/logo.jpg);">
-                        <div class="overlay">
-                            Projeto 2
-                        </div>
-                    </div>
-                    <div class="img-port" style="background-image: url(Images/logo.jpg);">
-                        <div class="overlay">
-                            Projeto 3
-                        </div>
-                    </div>
-                </div>
-        </section>
-
-        <section class="form">
-            <div class="interface">
-                <h2 class="title">TALK <span>WITH ME.</span></h2>
-
-                <form action="">
-                    <input type="text" name="" id="" placeholder="Your name" required>
-                    <input type="text" name="" id="" placeholder="Your email" required>
-                    <input type="text" name="" id="" placeholder="Your phone">
-                    <textarea name="" id="" placeholder="Your message" required></textarea>
-                    <div class="btn-enviar">
-                        <input type="submit" value="SEND">
-                    </div>
-                </form>
-            </div>
-        </section>
-
-    </main>
+    <main id="content"></main>
 
     <footer>
         <div class="interface">
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="Images/logo.webp" alt="Logotipo">
+                        <img src="Images/logo.png" alt="Logotipo">
                     </div>
                     <div class="btn-social">
-                        <a href="#">
+                        <a href="https://www.linkedin.com/in/pedrocosta15/">
                             <button>
                                 <i class="bi bi-linkedin"></i>
                             </button>
                         </a>
-                        <a href="#">
+                        <a href="https://github.com/PCCP1234">
                             <button><i class="bi bi-github"></i></button>
                         </a>
                     </div>
                 </div>
             </div>
             <div class="line-footer border">
-                <p><i class="bi bi-envelope-fill"></i><a href="mailto: contacto@pedro.com.pt">contacto@pedro.com.pt</a>
-                </p>
             </div><!--line-footer-->
         </div><!--interface-->
     </footer>
